--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="https://crypto-loot.com/lib/miner.css">
+    <link rel="stylesheet" type="text/css" href="miner.css">
 </head>
 <body>
     <div class="block">
