--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="miner.css">
 </head>
 <body>
+<div class="test">testing</div>
     <div class="block">
     <div class="six columns stopped" id="miner">
         <div class="row">
