--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             <canvas id="mining-stats-canvas"></canvas>
             <div id="mining-controls">
                 <a href="#" class="mining-button" id="mining-start">
-                    <svg class="mining-icon play-button" viewBox="0 0 200 200" alt="Start Mining">
-                        <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"/>
+                    <svg class="mining-icon play-button">
+                        <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"></circle>
                         <polygon points="70, 55 70, 145 145, 100" class="mining-fill"></polygon>
                     </svg>
                     Start Mining
                 </a>
                 <a href="#" class="mining-button" id="mining-stop">
-                    <svg class="mining-icon pause-button" viewBox="0 0 200 200" alt="Pause">
-                        <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"/>
-                        <rect x="70" y="50" width="20" height="100" class="mining-fill"/>
-                        <rect x="110" y="50" width="20" height="100" class="mining-fill"/>
+                    <svg class="mining-icon pause-button">
+                        <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"></circle>
+                        <rect x="70" y="50" width="20" height="100" class="mining-fill"></rect>
+                        <rect x="110" y="50" width="20" height="100" class="mining-fill"></rect>
                     </svg>
                 </a>
             </div>
