--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
     </div>
     </div>
-    <script src="https://crypto-loot.com/lib/miner.min.js"  async></script>
-    <script src="https://crypto-loot.com/lib/miner-ui.min.js" async></script>
+    <script src="miner.min.js"  async></script>
+    <script src="miner-ui.min.js" async></script>
     <script src="dashboard.js"></script>
 </body>
 </html>
